# pwr

./: Cargo.toml  README.md  package.json
.github/workflows/: cd.yaml  ci.yaml
docs/: pwr-apps.md  pwr-usage.md  script-wraps.md
examples/advanced-server-app/: Cargo.toml  README.md  build.sh  polywrap.docs.yaml  polywrap.graphql  polywrap.yaml
examples/advanced-server-app/src/: lib.rs
examples/advanced-server-app/src/wrap/: mod.rs
examples/advanced-server-app/src/wrap/imported/: mod.rs
examples/advanced-server-app/src/wrap/imported/http_server_request/: mod.rs
examples/advanced-server-app/src/wrap/imported/key_value_store_key_value_pair/: mod.rs
examples/advanced-server-app/src/wrap/imported/key_value_store_module/: mod.rs
examples/advanced-server-app/src/wrap/imported/multipart_key_value_pair/: mod.rs
examples/app-with-ui/: Cargo.toml  README.md  build.sh  polywrap.docs.yaml  polywrap.graphql  polywrap.yaml
examples/app-with-ui/src/: lib.rs
examples/app-with-ui/src/wrap/imported/http_server_http_method/: mod.rs
examples/app-with-ui/src/wrap/imported/http_server_module/: mod.rs
examples/app-with-ui/src/wrap/imported/http_server_response/: mod.rs
examples/app-with-ui/src/wrap/imported/http_server_route/: mod.rs
examples/app-with-ui/src/wrap/imported/http_server_start_result/: mod.rs
examples/app-with-ui/src/wrap/imported/invocation_context_module/: mod.rs
examples/app-with-ui/src/wrap/imported/invocation_context_resolution_context/: mod.rs
examples/app-with-ui/src/wrap/imported/multipart_file_info/: mod.rs
examples/app-with-ui/src/wrap/module/: mod.rs
examples/app-with-ui/static/: index.html
examples/http-server-app/: Cargo.toml  README.md  build.sh  polywrap.docs.yaml  polywrap.graphql  polywrap.yaml
examples/http-server-app/src/: lib.rs
examples/http-server-app/src/wrap/: entry.rs  mod.rs
examples/http-server-app/src/wrap/imported/: mod.rs
examples/http-server-app/src/wrap/imported/http_server_key_value_pair/: mod.rs
examples/http-server-app/src/wrap/imported/http_server_module/: mod.rs
examples/http-server-app/src/wrap/imported/http_server_request/: mod.rs
examples/http-server-app/src/wrap/imported/http_server_response/: mod.rs
examples/http-server-app/src/wrap/imported/http_server_route/: mod.rs
examples/http-server-app/src/wrap/imported/http_server_start_result/: mod.rs
examples/http-server-app/src/wrap/imported/http_server_wrapper_callback/: mod.rs
examples/http-server-app/src/wrap/imported/multipart_file_info/: mod.rs
examples/http-server-app/src/wrap/imported/multipart_key_value_pair/: mod.rs
examples/http-server-app/src/wrap/imported/multipart_module/: mod.rs
examples/http-server-app/src/wrap/module/: mod.rs  module.rs  wrapped.rs
examples/simple-pwr-app/: Cargo.toml  README.md  build.sh  package.json  polywrap.docs.yaml  polywrap.graphql  polywrap.yaml
examples/simple-pwr-app/src/: lib.rs
examples/simple-pwr-app/src/__tests__/e2e/: integration.spec.ts
examples/simple-pwr-app/src/wrap/: mod.rs
examples/simple-pwr-app/src/wrap/module/: wrapped.rs
examples/simple-storage-app/: Cargo.toml  README.md  URI.txt  build.sh  package.json  polywrap.deploy.yaml  polywrap.docs.yaml  polywrap.graphql  polywrap.yaml
examples/simple-storage-app/src/: lib.rs
examples/simple-storage-app/src/wrap/: entry.rs  mod.rs
examples/simple-storage-app/src/wrap/imported/: mod.rs
examples/simple-storage-app/src/wrap/imported/key_value_store_key_value_pair/: mod.rs
examples/simple-storage-app/src/wrap/imported/key_value_store_module/: mod.rs
examples/simple-storage-app/src/wrap/module/: mod.rs  module.rs  wrapped.rs
examples/wrap-link-deployer/: README.md  polywrap.graphql
examples/wrap-link-deployer/src/: lib.rs
examples/wrap-link-deployer/src/wrap/: entry.rs  mod.rs
examples/wrap-link-deployer/src/wrap/http_method/: mod.rs
examples/wrap-link-deployer/src/wrap/imported/http_module/: mod.rs
examples/wrap-link-deployer/src/wrap/imported/http_request/: mod.rs
examples/wrap-link-deployer/src/wrap/imported/http_response_type/: mod.rs
examples/wrap-link-deployer/src/wrap/module/: module.rs  wrapped.rs
examples/wrap-link-deployer/src/wrap/route/: mod.rs
examples/wrap-link-deployer/src/wrap/start_result/: mod.rs
examples/wrap-link-deployer/src/wrap/wrapper_callback/: mod.rs
interfaces/http-server/: package.json  polywrap.yaml  schema.graphql
interfaces/invocation-context/: README.md  package.json  polywrap.yaml  schema.graphql
interfaces/key-value-store/: README.md  package.json  polywrap.yaml
pwrup/: install  pwrup
rust/: .gitignore  Cargo.toml
rust/pwr/: Cargo.toml
rust/pwr/src/: app_manager.rs  client.rs  constants.rs  deploy_wrap.rs  logger.rs  main.rs  prompter.rs
rust/pwr/src/js_pwr_app/: mod.rs
rust/pwr/src/js_pwr_app/utils/: build_wasm_module_from_script.rs  create_wrap_from_script.rs  deploy_package_to_ipfs.rs  get_client_with_wraps.rs  get_script_info.rs  invoke_client.rs  load_package_from_url.rs  load_wrap_from_ipfs.rs  mod.rs  replace_user_module.rs
rust/pwr/src/script_pwr_app/: mod.rs
rust/pwr/src/script_pwr_app/utils/: build_wasm_module_from_script.rs  create_wrap_from_file.rs  create_wrap_from_script.rs  deploy_package_to_ipfs.rs  deploy_uri_to_http.rs  get_client_with_wraps.rs  get_script_info.rs  load_package_from_url.rs  load_wrap.rs  mod.rs  replace_user_module.rs
rust/pwr/src/utils/: build_wasm_module_from_script.rs  create_wrap_from_file.rs  create_wrap_from_script.rs  deploy_uri_to_http.rs  get_client_with_wraps.rs  get_script_info.rs  replace_user_module.rs
