[workspace.package]
version = "0.1.0"
license = "MIT"
edition = "2021"
rust-version = "1.69"
repository = "https://github.com/polywrap/pwr"

[workspace]
members = [
    "packages/pwr",
    "packages/script-wrap-utils",
    "packages/script-wrap-utils-wasm",
    "packages/wrap-utils",
    "packages/wrap-utils-wasm",
    "packages/easy-error-string",
    "packages/wraps/script-wrap-manager",
    "examples/simple-pwr-app",
]

default-members = [
    "packages/pwr",
    "packages/script-wrap-utils",
    "packages/script-wrap-utils-wasm",
    "packages/wrap-utils",
    "packages/wrap-utils-wasm",
    "packages/easy-error-string",
    "packages/wraps/script-wrap-manager",
    "examples/simple-pwr-app",
]

[workspace.dependencies]
script_wrap_utils = { path = "packages/script-wrap-utils" }
script_wrap_utils_wasm = { path = "packages/script-wrap-utils-wasm" }
wrap_utils = { path = "packages/wrap-utils" }
wrap_utils_wasm = { path = "packages/wrap-utils-wasm" }
easy_error_string = { version = "0.1.0", path = "packages/easy-error-string" }
polywrap_uri = { version = "0.1.9-beta.2" }
polywrap_core = { version = "0.1.9-beta.2" }
polywrap_client = { version = "0.1.9-beta.2" }
polywrap_plugin = { version = "0.1.9-beta.2" }
wrap_manifest_schemas = { version = "0.1.9-beta.2" }
polywrap_resolvers = { version = "0.1.9-beta.2" }
polywrap_client_builder = { version = "0.1.9-beta.2" }
polywrap_client_default_config = { version = "0.1.9-beta.2" }
polywrap_wasm = { version = "0.1.9-beta.2" }
polywrap_fs_plugin = { version = "0.1.9-beta.2" }
polywrap_http_plugin = { version = "0.1.9-beta.2" }
polywrap-wasm-rs = { version = "0.11.2" }
polywrap_msgpack_serde = "0.0.2-beta.7"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
rmp-serde = "1.1.1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
base64 = "0.21.2"
reqwest = { version = "0.11.18", features = ["multipart", "json", "blocking"] }
thiserror = "1.0.37"
tokio = { version = "1", features = ["full"] }
