[workspace.package]
version = "0.1.0"
license = "MIT"
edition = "2021"
rust-version = "1.69"
repository = "https://github.com/polywrap/pwr"

[workspace]
members = [
    "packages/pwr",
    "packages/script-wrap-utils",
    "packages/script-wrap-utils-wasm",
    "packages/wrap-utils",
    "packages/wrap-utils-wasm",
    "packages/easy-error-string",
    "packages/wraps/script-wrap-manager",
    "packages/wraps/multipart",
    "packages/plugins/http-server",
    "packages/plugins/key-value-store",
    "examples/simple-pwr-app",
    "examples/http-server-app",
    "examples/simple-storage-app",
]

default-members = [
    "packages/pwr",
    "packages/script-wrap-utils",
    "packages/script-wrap-utils-wasm",
    "packages/wrap-utils",
    "packages/wrap-utils-wasm",
    "packages/easy-error-string",
    "packages/plugins/http-server",
    "packages/plugins/key-value-store",
    "packages/wraps/script-wrap-manager",
    "packages/wraps/multipart",
    "examples/simple-pwr-app",
    "examples/http-server-app",
    "examples/simple-storage-app",
]

[workspace.dependencies]
script_wrap_utils = { path = "packages/script-wrap-utils" }
script_wrap_utils_wasm = { path = "packages/script-wrap-utils-wasm" }
wrap_utils = { path = "packages/wrap-utils" }
wrap_utils_wasm = { path = "packages/wrap-utils-wasm" }
easy_error_string = { version = "0.1.0", path = "packages/easy-error-string" }
polywrap_http_server_plugin = { path = "packages/plugins/http-server" }
polywrap_key_value_store_plugin = { path = "packages/plugins/key-value-store" }
polywrap_uri = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap_core = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap_client = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap_plugin = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
wrap_manifest_schemas = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap_resolvers = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap_client_builder = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap_client_default_config = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap_wasm = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap_fs_plugin = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap_http_plugin = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap-wasm-rs = { version = "0.11.2" }
polywrap_msgpack_serde = "0.0.2-beta.7"
tower-http = { version = "0.4.3", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
rmp-serde = "1.1.1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
base64 = "0.21.2"
reqwest = { version = "0.11.18", features = ["multipart", "json", "blocking"] }
thiserror = "1.0.37"
tokio = { version = "1", features = ["full"] }

[patch.crates-io]
polywrap_uri = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap_core = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap_client = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap_plugin = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
wrap_manifest_schemas = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap_resolvers = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap_client_builder = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap_client_default_config = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap_wasm = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap_fs_plugin = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap_http_plugin = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }