[workspace.package]
version = "0.1.0"
license = "MIT"
edition = "2021"
rust-version = "1.69"
repository = "https://github.com/polywrap/pwr"

[workspace]
members = [
    "packages/pwr",
    "packages/script-wrap-utils",
    "packages/script-wrap-utils-wasm",
    "packages/wrap-utils",
    "packages/wrap-utils-wasm",
    "packages/wraps/script-wrap-manager",
]

default-members = [
    "packages/pwr",
    "packages/script-wrap-utils",
    "packages/script-wrap-utils-wasm",
    "packages/wrap-utils",
    "packages/wrap-utils-wasm",
    "packages/wraps/script-wrap-manager",
]

[workspace.dependencies]
script_wrap_utils = { path = "packages/script-wrap-utils" }
script_wrap_utils_wasm = { path = "packages/script-wrap-utils-wasm" }
wrap_utils = { path = "packages/wrap-utils" }
wrap_utils_wasm = { path = "packages/wrap-utils-wasm" }
polywrap_client = { git = "https://github.com/polywrap/rust-client.git" }
polywrap_client_builder = { git = "https://github.com/polywrap/rust-client.git"  }
polywrap_client_default_config = { git = "https://github.com/polywrap/rust-client.git"  }
wrap_manifest_schemas = { git = "https://github.com/polywrap/rust-client.git"  }
polywrap_msgpack = { git = "https://github.com/polywrap/rust-client.git"  }
polywrap_fs_plugin = { version  = "0.0.1-beta.4" }
polywrap_http_plugin = { version  = "0.0.1-beta.4" }
polywrap-wasm-rs = { version = "=0.10.3" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
rmp-serde = "1.1.1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
base64 = "0.21.2"
reqwest = { version = "0.11.18", features = ["multipart", "json"] }
thiserror = "1.0.37"
tokio = { version = "1", features = ["full"] }

[patch.crates-io]
polywrap_uri = { git = "https://github.com/polywrap/rust-client.git"  }
polywrap_core = { git = "https://github.com/polywrap/rust-client.git"  }
polywrap_client = { git = "https://github.com/polywrap/rust-client.git"  }
polywrap_plugin = { git = "https://github.com/polywrap/rust-client.git"  }
wrap_manifest_schemas = { git = "https://github.com/polywrap/rust-client.git"  }
polywrap_msgpack = { git = "https://github.com/polywrap/rust-client.git"  }
polywrap_resolvers = { git = "https://github.com/polywrap/rust-client.git"  }
