[package]
name = "app_with_ui"
version = "0.1.0"
description = "An example of a PWR HTTP server application with UI"

edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
polywrap_msgpack_serde.workspace = true
polywrap-wasm-rs.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_bytes.workspace = true

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
