[package]
name = "pwr"
version = "0.1.2"
edition = "2021"

[dependencies]
polywrap_client = "0.1.6-beta.5"
wrap_manifest_schemas = "0.1.6-beta.5"
polywrap_msgpack = "0.1.6-beta.5"
dirs = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
reqwest = "0.11.18"
rmp-serde = "1.1.1"
tokio = { version = "1", features = ["full"] }
rmpv = { version = "1.0.0", features = ["with-serde"] }
