[package]
name = "pwr"
version = "0.1.4"
edition = "2021"

[dependencies]
polywrap_client = { git = "https://github.com/polywrap/rust-client.git" }
polywrap_client_builder = { git = "https://github.com/polywrap/rust-client.git"  }
polywrap_client_default_config = { git = "https://github.com/polywrap/rust-client.git"  }
wrap_manifest_schemas = { git = "https://github.com/polywrap/rust-client.git"  }
polywrap_msgpack = { git = "https://github.com/polywrap/rust-client.git"  }
polywrap_fs_plugin = { version  = "0.0.1-beta.4" }
polywrap_http_plugin = { version  = "0.0.1-beta.4" }
dirs = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
reqwest = { version = "0.11.18", features = ["multipart", "json"] }
rmp-serde = "1.1.1"
tokio = { version = "1", features = ["full"] }
rmpv = { version = "1.0.0", features = ["with-serde"] }
clap = { version = "4.3.4", features = ["cargo"] }
tokio-tar = "0.3"
tokio-util = "0.6"
futures = "0.3"
colored = "2.0.0"
notify = "6.0.1"
notify-debouncer-mini = "0.3.0"
openssl = { version = "0.10.55", features = ["vendored"] }

[patch.crates-io]
polywrap_uri = { git = "https://github.com/polywrap/rust-client.git"  }
polywrap_core = { git = "https://github.com/polywrap/rust-client.git"  }
polywrap_client = { git = "https://github.com/polywrap/rust-client.git"  }
polywrap_plugin = { git = "https://github.com/polywrap/rust-client.git"  }
wrap_manifest_schemas = { git = "https://github.com/polywrap/rust-client.git"  }
polywrap_msgpack = { git = "https://github.com/polywrap/rust-client.git"  }
polywrap_resolvers = { git = "https://github.com/polywrap/rust-client.git"  }
